--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/tamplogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tamp</title>
+    <style>
+      /* Enable smooth scrolling for the whole page */
+      html {
+        scroll-behavior: smooth;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
